moved spacing in profile schedule to fix look when Edit button not visible

--- a/src/scss/profile/_profile-schedule.scss
+++ b/src/scss/profile/_profile-schedule.scss
@@ -24,11 +24,11 @@ $select-box-width: 75%;
 			display: block;
 			font-size: $class-size;
 			padding-top: 10px;
-
-			&:last-child {
-				padding-bottom: 15px;
-			}
 		}
+	}
+
+	.schedule-add {
+		margin-top: 15px;
 	}
 
 	.profile-schedule-form {
